--- a/Zhy.Components.Wpf/_View/_Theme/AppDictionary.xaml
+++ b/Zhy.Components.Wpf/_View/_Theme/AppDictionary.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:helper="clr-namespace:Zhy.Components.Wpf._Common._Utils">
+    xmlns:helper="clr-namespace:Zhy.Components.Wpf._Common._Utils"
+    xmlns:local="clr-namespace:Zhy.Components.Wpf._View._UserControl">
     <LinearGradientBrush x:Key="InfoBrushSelected" StartPoint="0,0" EndPoint="1,1">
         <GradientStop Offset="0" Color="#1177DD" />
         <GradientStop Offset="1" Color="#000099" />
@@ -451,4 +452,185 @@
             </MultiTrigger>
         </Style.Triggers>
     </Style>
+
+    <ControlTemplate x:Key="ComboBoxToggleButton" TargetType="{x:Type ToggleButton}">
+        <Grid Height="25">
+            <Border
+                Grid.Column="1"
+                Background="White"
+                Cursor="Hand"
+                Opacity="0" />
+            <Path
+                x:Name="Arrow"
+                Grid.Column="1"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Data="M 0 0  6 6 12 0 Z"
+                Fill="#B1B1B1"
+                Stretch="None" />
+        </Grid>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsChecked" Value="true">
+                <Setter TargetName="Arrow" Property="RenderTransform">
+                    <Setter.Value>
+                        <RotateTransform Angle="180" CenterX="6" CenterY="3" />
+                    </Setter.Value>
+                </Setter>
+                <Setter TargetName="Arrow" Property="Margin" Value="0,0,0,2" />
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+
+    <!--  MultiComboBox普通样式  -->
+    <!--<Style TargetType="{x:Type local:MultiComboBox}">
+        <Setter Property="Width" Value="200" />
+        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="MaxDropDownHeight" Value="400" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:MultiComboBox}">
+                    <Grid>
+                        <Border
+                            x:Name="Bg"
+                            Width="{TemplateBinding Width}"
+                            Height="{TemplateBinding Height}"
+                            BorderBrush="#eaeaea"
+                            BorderThickness="1"
+                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                            <Grid x:Name="PART_Root">
+
+                                <Grid x:Name="PART_InnerGrid" Margin="0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="0.3*" MaxWidth="30" />
+                                    </Grid.ColumnDefinitions>
+                                    <ListBox
+                                        x:Name="PART_ListBoxChk"
+                                        BorderThickness="0"
+                                        ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                                        SelectionMode="Multiple">
+                                        <ListBox.ItemsPanel>
+                                            <ItemsPanelTemplate>
+                                                <VirtualizingStackPanel Orientation="Horizontal" VirtualizingStackPanel.IsVirtualizing="True" />
+                                            </ItemsPanelTemplate>
+                                        </ListBox.ItemsPanel>
+                                        <ListBox.ItemContainerStyle>
+                                            <Style TargetType="ListBoxItem">
+                                                <Setter Property="BorderThickness" Value="0" />
+                                                <Setter Property="IsSelected" Value="True" />
+                                                <Setter Property="Template">
+                                                    <Setter.Value>
+                                                        <ControlTemplate TargetType="ListBoxItem">
+                                                            <CheckBox
+                                                                HorizontalAlignment="Center"
+                                                                VerticalAlignment="Center"
+                                                                BorderThickness="0"
+                                                                Content="{Binding Name}"
+                                                                IsChecked="{Binding Path=IsSelected, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                                        </ControlTemplate>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </Style>
+                                        </ListBox.ItemContainerStyle>
+                                    </ListBox>
+
+                                    --><!--  下拉按钮  --><!--
+                                    <ToggleButton
+                                        x:Name="PART_DropDownToggle"
+                                        Grid.Column="1"
+                                        IsChecked="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+                                        IsTabStop="False"
+                                        Template="{StaticResource ComboBoxToggleButton}" />
+                                </Grid>
+                            </Grid>
+                        </Border>
+                        --><!--  弹出多选列表  --><!--
+                        <Popup
+                            x:Name="PART_Popup"
+                            AllowsTransparency="True"
+                            Focusable="False"
+                            IsOpen="{Binding IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}}"
+                            Placement="Bottom"
+                            PopupAnimation="{DynamicResource {x:Static SystemParameters.ComboBoxPopupAnimationKey}}"
+                            StaysOpen="False">
+                            <Grid Width="{Binding ActualWidth, RelativeSource={RelativeSource TemplatedParent}}" MaxHeight="{Binding MaxDropDownHeight, RelativeSource={RelativeSource TemplatedParent}}">
+                                <ListBox
+                                    x:Name="PART_ListBox"
+                                    MaxHeight="{TemplateBinding MaxDropDownHeight}"
+                                    Background="White"
+                                    BorderBrush="#eaeaea"
+                                    BorderThickness="1,0,1,1"
+                                    ItemsSource="{Binding ItemsSource, RelativeSource={RelativeSource TemplatedParent}}"
+                                    SelectionMode="Multiple">
+                                    <ListBox.ItemContainerStyle>
+                                        <Style TargetType="ListBoxItem">
+                                            <Setter Property="Template">
+                                                <Setter.Value>
+                                                    <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                                        <Grid Height="22">
+                                                            <Border
+                                                                x:Name="bg"
+                                                                BorderBrush="#eaeaea"
+                                                                BorderThickness="0" />
+                                                            <ContentPresenter x:Name="content" />
+                                                            <Border Background="White" Opacity="0" />
+                                                        </Grid>
+                                                        <ControlTemplate.Triggers>
+                                                            <Trigger Property="IsSelected" Value="True">
+                                                                <Setter TargetName="bg" Property="Background" Value="#ADD6FF" />
+                                                            </Trigger>
+                                                            <MultiTrigger>
+                                                                <MultiTrigger.Conditions>
+                                                                    <Condition Property="IsMouseOver" Value="true" />
+                                                                    <Condition Property="IsSelected" Value="false" />
+                                                                </MultiTrigger.Conditions>
+                                                                <Setter TargetName="bg" Property="Background" Value="#009BDB" />
+                                                                <Setter TargetName="bg" Property="Opacity" Value="0.7" />
+                                                                <Setter Property="Foreground" Value="White" />
+                                                            </MultiTrigger>
+                                                            <Trigger Property="IsEnabled" Value="False">
+                                                                <Setter TargetName="bg" Property="Opacity" Value="0.3" />
+                                                                <Setter Property="Foreground" Value="Gray" />
+                                                            </Trigger>
+                                                        </ControlTemplate.Triggers>
+                                                    </ControlTemplate>
+                                                </Setter.Value>
+                                            </Setter>
+                                        </Style>
+                                    </ListBox.ItemContainerStyle>
+                                    <ListBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <Grid>
+                                                <CheckBox
+                                                    x:Name="chk"
+                                                    VerticalAlignment="Center"
+                                                    IsChecked="{Binding IsCheck, Mode=TwoWay}"
+                                                    Visibility="Hidden" />
+                                                <CheckBox
+                                                    VerticalAlignment="Center"
+                                                    Content="{Binding Path=Name}"
+                                                    Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType=ListBoxItem}}"
+                                                    IsChecked="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem}, Path=IsSelected, Mode=TwoWay}" />
+                                            </Grid>
+                                            <DataTemplate.Triggers>
+                                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem}, Path=IsSelected}" Value="true">
+                                                    <Setter TargetName="chk" Property="IsChecked" Value="true" />
+                                                </DataTrigger>
+                                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem}, Path=IsSelected}" Value="false">
+                                                    <Setter TargetName="chk" Property="IsChecked" Value="false" />
+                                                </DataTrigger>
+                                            </DataTemplate.Triggers>
+                                        </DataTemplate>
+                                    </ListBox.ItemTemplate>
+                                </ListBox>
+                            </Grid>
+                        </Popup>
+                    </Grid>
+
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>-->
 </ResourceDictionary>
