--- a/Zhy.Demo/_View/ZhyDataGridWindow.xaml
+++ b/Zhy.Demo/_View/ZhyDataGridWindow.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal" Visibility="Collapsed">
+        <StackPanel Orientation="Horizontal" Visibility="Visible">
             <Button
                 Margin="1"
                 Command="{Binding CommandChangeReadOnly}"
