--- a/Zhy.Demo/MainWindow.xaml
+++ b/Zhy.Demo/MainWindow.xaml
@@ -2,11 +2,13 @@
     x:Class="Zhy.Demo.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:_usercontrol="clr-namespace:Zhy.Components.Wpf._View._UserControl;assembly=Zhy.Components.Wpf"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Zhy.Demo"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Width="800"
     Height="450"
+    Background="#f0f0f0"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid>
@@ -24,6 +26,15 @@
                 Click="buttonZhyFormGrid_Click"
                 Content="ZhyFormGrid"
                 Style="{DynamicResource SuccessButton}" />
+            <Button
+                x:Name="buttonZhyFormDialog"
+                Margin="10"
+                Click="buttonZhyFormDialog_Click"
+                Content="ZhyFormDialog"
+                Style="{DynamicResource SuccessButton}" />
+            <StackPanel>
+                <_usercontrol:DateTimePicker />
+            </StackPanel>
         </UniformGrid>
     </Grid>
 </Window>
