--- a/Zhy.Components.Wpf/Views/Windows/Zhys/ZFormGrid.xaml
+++ b/Zhy.Components.Wpf/Views/Windows/Zhys/ZFormGrid.xaml
@@ -81,19 +81,30 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <DockPanel Grid.Row="1" LastChildFill="False">
+        <DockPanel Grid.Row="1">
             <Button
                 Margin="10,5"
+                VerticalAlignment="Bottom"
                 Command="{Binding CancelCommand}"
                 Content="取  消"
                 DockPanel.Dock="Right"
                 Style="{DynamicResource DefaultButton}" />
             <Button
                 Margin="10,5"
+                VerticalAlignment="Bottom"
                 Command="{Binding OKCommand}"
                 Content="确  定"
                 DockPanel.Dock="Right"
                 Style="{DynamicResource InfoButton}" />
+            <TextBox
+                x:Name="textBoxTip"
+                MaxHeight="42"
+                Padding="5"
+                Background="Transparent"
+                BorderThickness="0"
+                IsReadOnly="True"
+                TextWrapping="Wrap"
+                VerticalScrollBarVisibility="Hidden" />
         </DockPanel>
     </Grid>
 </Window>
