--- a/Zhy.Demo/MainWindow.xaml
+++ b/Zhy.Demo/MainWindow.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Zhy.Demo"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Zhy.Components.Wpf"
     Width="800"
     Height="450"
     Background="#f0f0f0"
@@ -31,25 +32,13 @@
                 Margin="10"
                 Click="buttonZhyFormDialog_Click"
                 Content="ZhyFormDialog"
-                Style="{DynamicResource SuccessButton}" />
+                Style="{DynamicResource WarnButton}" />
             <Button
                 x:Name="buttonZhyFormGroupGrid"
                 Margin="10"
                 Click="buttonZhyFormGroupGrid_Click"
                 Content="ZhyFormGroupGrid"
-                Style="{DynamicResource SuccessButton}" />
-            <Button
-                x:Name="buttonTree"
-                Margin="10"
-                Click="buttonTree_Click"
-                Content="Tree"
-                Style="{DynamicResource SuccessButton}" />
-            <Button
-                x:Name="buttonZhyTreeView"
-                Margin="10"
-                Click="buttonZhyTreeView_Click"
-                Content="TreeView"
-                Style="{DynamicResource SuccessButton}" />
+                Style="{DynamicResource ErrorButton}" />
         </UniformGrid>
     </Grid>
 </Window>
